# process-guide-agent

./: .dockerignore  .gitignore  Dockerfile  README.md  create_sample_doc.py  pyproject.toml  sample_process.docx
process_guide_agent/: agent.py  prompts.py  tools.py
